# dmtask

./: CMakeLists.txt  README.md
examples/dmtask_main/: dmtask_main.cpp
include/: dmtask.h  dmtask_config.h  dmtask_config.h.in  libdmtask.h  libdmtask.tpp  libdmtask_impl.h  libdmtask_impl.tpp
src/libdmtask/: libdmtask.def  libdmtask_impl.cpp  libdmtask_impl.h
test/dmtasktest/: dmtasktest.cpp
